plugins {
	id 'java'
	id 'groovy'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'project'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

bootRun {
	jvmArgs = [
			"-javaagent:/Users/jaepil/Documents/scouter/agent.java/scouter.agent.jar",
			"-Dscouter.config=/Users/jaepil/Documents/scouter/agent.java/conf/scouter.conf",
			"-Dobj_name=for-work",
			"--add-opens", "java.base/java.lang=ALL-UNNAMED"
	]
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-core:5.5.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
	testImplementation 'com.h2database:h2'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.apache.groovy:groovy:4.0.18'
	testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
	testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'

	//retry
	implementation 'org.springframework.retry:spring-retry'

	//aop
	implementation 'org.springframework:spring-aspects'
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	//db
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'

	//swagger
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0"

	//mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//jwt
	implementation 'com.auth0:java-jwt:4.0.0'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	//query dsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
}

tasks.named('test') {
	useJUnitPlatform()
}